# hfsm-agent-framework

./: .env.example  .gitignore  CLAUDE.md  QUICKSTART.md  README.md  project_map.md  pyproject.toml  readme_preview.html  setup.py
.agents/guides/: query-db.md
.agents/workflows/: consult.md  design.md  init.md  lookup.md  query-db.md  quick.md  status.md
cli/: hfsm_cli.py
design/: design_index.md  factor_lookup.md  target_lookup.md  timing_lookup.md
design/templates/: readme.md  ur_equipment.md
docs/: design_philosophy.md  knowledge_system_design.md  markitdown_migration.md
domains/: boss.md  buff.md  general.md  hero.md  scene.md  ship.md  skill.md  soul.md
examples/game_config/: README.md  agents.json
hfsm/: __init__.py  config.py  hook_utils.py  registry.py  runner.py
hfsm/utils/: cleaner.py
mapping/: README.md
references/: .env  index.md  naming_convention.md  project_map.html  project_map.md  test_glm.py
references/design/: factor_lookup.md  standalone_client_plan.md  target_lookup.md  timing_lookup.md
references/domains/: boss.md  general.md  skill.md  soul.md
references/mapping/: item_templates.md  table_relations.md
scripts/: readme.md
scripts/cli/: check_factor.py  query.py  search_table.py
scripts/combat/: combat_validator.py  whitelist.py
scripts/configs/: table_registry.json
scripts/core/: constants.py  hfsm_bootstrap.py  hfsm_registry.py  machine_hooks.py
scripts/tests/: check_headers.py  check_item_rows.py  check_maxid.py  check_null_zero.py  check_registry.py  check_row6.py  (+34 more)
test_sim_project/: .gitignore  agents.json
(+276 files in other folders)
